<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/main_header"
                android:text="@string/title" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="Enter your name" />

            <!--Beginning of question 1-->
            <LinearLayout style="@style/container">

                <TextView
                    style="@style/headerStyle"
                    android:text="@string/header" />

                <TextView
                    style="@style/questions"
                    android:text="@string/question1" />
                <!--The opitons layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/q1_op1"
                            style="@style/radio"
                            android:text="@string/first1" />

                        <RadioButton
                            android:id="@+id/q1_op2"
                            style="@style/radio"
                            android:text="@string/second1" />


                        <RadioButton
                            android:id="@+id/q1_op3"
                            style="@style/radio"
                            android:text="@string/third1" />

                        <RadioButton
                            android:id="@+id/q1_op4"
                            style="@style/radio"
                            android:text="@string/fourth1" />
                    </RadioGroup>

                </LinearLayout>
                <View
                    style="@style/separator"/>
            </LinearLayout> <!-- End of question 1-->

            <!--Beginning of question 2-->
            <LinearLayout style="@style/container">

                <TextView
                    style="@style/headerStyle"
                    android:text="@string/header2" />

                <TextView
                    style="@style/questions"
                    android:text="@string/question2" />
                <!--The opitons layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/q2_op1"
                            style="@style/radio"
                            android:text="@string/first2" />

                        <RadioButton
                            android:id="@+id/q2_op2"
                            style="@style/radio"
                            android:text="@string/second2" />


                        <RadioButton
                            android:id="@+id/q2_op3"
                            style="@style/radio"
                            android:text="@string/third2" />

                        <RadioButton
                            android:id="@+id/q2_op4"
                            style="@style/radio"
                            android:text="@string/fourth2" />
                    </RadioGroup>
                </LinearLayout>
                <View
                    style="@style/separator"/>
            </LinearLayout> <!-- End of question 2-->

            <!--Beginning of question 3-->
            <LinearLayout style="@style/container">

                <TextView
                    style="@style/headerStyle"
                    android:text="@string/header3" />

                <TextView
                    style="@style/questions"
                    android:text="@string/question3" />
                <!--The opitons layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/q3_op1"
                            style="@style/radio"
                            android:text="@string/first3" />

                        <RadioButton
                            android:id="@+id/q3_op2"
                            style="@style/radio"
                            android:text="@string/second3" />


                        <RadioButton
                            android:id="@+id/q3_op3"
                            style="@style/radio"
                            android:text="@string/third3" />

                        <RadioButton
                            android:id="@+id/q3_op4"
                            style="@style/radio"
                            android:text="@string/fourth3" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout> <!-- End of question 3-->

            <!--Beginning of question 4-->
            <LinearLayout style="@style/container">

                <TextView
                    style="@style/headerStyle"
                    android:text="@string/header4" />

                <TextView
                    style="@style/questions"
                    android:text="@string/question3" />
                <!--The optons layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/q4_op1"
                            style="@style/radio"
                            android:text="@string/first4" />

                        <RadioButton
                            android:id="@+id/q4_op2"
                            style="@style/radio"
                            android:text="@string/second4" />


                        <RadioButton
                            android:id="@+id/q4_op3"
                            style="@style/radio"
                            android:text="@string/third4" />

                        <RadioButton
                            android:id="@+id/q4_op4"
                            style="@style/radio"
                            android:text="@string/fourth4" />
                    </RadioGroup>
                </LinearLayout>
                <View
                    style="@style/separator"/>
            </LinearLayout> <!-- End of question 4-->

            <!--Beginning of question 5-->
            <LinearLayout style="@style/container">

                <TextView
                    style="@style/headerStyle"
                    android:text="@string/header5" />

                <TextView
                    style="@style/questions"
                    android:text="@string/question3" />
                <!--The optons layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/q5_op1"
                            style="@style/radio"
                            android:text="@string/first5" />

                        <RadioButton
                            android:id="@+id/q5_op2"
                            style="@style/radio"
                            android:text="@string/second5" />


                        <RadioButton
                            android:id="@+id/q5_op3"
                            style="@style/radio"
                            android:text="@string/third5" />

                        <RadioButton
                            android:id="@+id/q5_op4"
                            style="@style/radio"
                            android:text="@string/fourth5" />
                    </RadioGroup>
                </LinearLayout>
                <View
                    style="@style/separator"/>
            </LinearLayout> <!-- End of question 5-->

            <!--Submit button-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/submit_btn"
                    android:onClick="checkAnswer"
                    style="@style/btn_submit" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>